# cloud-courier

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  AGENTS.md  README.md  mutex_queue  pyinstaller.spec  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: devcontainer.json  docker-compose.yml  on-create-command.sh  post-start-command.sh
.github/: dependabot.yml
.github/actions/ecr-auth/: action.yml
.github/workflows/: ci.yaml  publish.yaml  publish_to_staging.yaml
docs/: conf.py  configure-lab-computers.rst  connect-computer-to-aws.rst  end-user-gui-access.rst  faq.rst  index.rst  installation.rst  requirements.txt  setup-aws.rst  setup-cloud-courier-infra.rst  setup-github.rst
src/: entrypoint.py
src/cloud_courier/: __init__.py  aws_credentials.py  cli.py  constants.py  courier_config_models.py  load_config.py  logger_config.py  main.py  upload.py
tests/: conftest.py
tests/executable/: test_intact.py
tests/unit/: conftest.py  constants.py  example_windows_aws_creds.ini  fixtures.py  test_aws_creds.py  test_checksums.py  test_dummy.py  test_folder_monitoring.py  test_load_config.py  test_main.py  test_metrics.py  test_upload.py
tests/unit/example_data_files/: 50_bytes.txt
