[project]
name = "cloud-courier"
version = "0.0.4"
description = "Agent to upload files to cloud"
authors = [
    {name = "Eli Fine"},

]
readme = "README.md"
requires-python = ">=3.12.7"
classifiers = [
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.12",

]
dependencies = [
    "boto3>=1.36.3",
    "structlog>=25.1.0",
    "watchdog>=6.0.0",
    "pydantic>=2.10.6",
    "boto3-stubs[ssm]"
]


[dependency-groups]
dev = [
    # Specific to this template

    "boto3-stubs[all]>=1.36.3",
    "pytest-mock>=3.14.0",
    "time-machine>=2.16.0",
    "pytest-timeout>=2.3.1",
    "sphinx-togglebutton==0.3.2",

    # Managed by upstream template
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-randomly>=3.16.0",
    "sphinx==8.1.3",
    "pyinstaller>=6.12.0",
]

[tool.setuptools]
license-files = [] # kludge until this bug is fixed https://github.com/pypa/setuptools/issues/4759

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
