[project]
name = "cloud-courier"
version = "0.0.4"
description = "Agent to upload files to cloud"
authors = [
    {name = "Eli Fine"},

]
readme = "README.md"
requires-python = ">=3.12.7"
classifiers = [
    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.12",

]
dependencies = [
    "boto3>=1.40.6",
    "structlog>=25.4.0",
    "watchdog>=6.0.0",
    "pydantic>=2.11.2",
    "boto3-stubs[ssm]"
]


[dependency-groups]
dev = [
    # Specific to this repository


    "boto3-stubs[all]>=1.40.6",
    "pytest-mock>=3.15.0",
    "time-machine>=2.17.0",
    "pytest-timeout>=2.4.0",
    "sphinx-togglebutton==0.3.2",

    # Managed by upstream template
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "sphinx==8.1.3",
    "pyinstaller>=6.15.0",
]

[tool.setuptools]
license-files = [] # kludge until this bug is fixed https://github.com/pypa/setuptools/issues/4759

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
